# mlpolymarket

./: .gitignore  README.md  pyproject.toml  run.py  sweep.py
config/: default.yaml  sweep.yaml
docs/: GCP_TRAINING_REFERENCE.md
scripts/: generate_dummy_data.py  generate_dummy_polymarket.py
src/: __init__.py
src/data/: __init__.py  load.py  scaler.py  sequences.py
src/eval/: __init__.py  metrics.py
src/models/: __init__.py  baselines.py  lstm.py  mlp.py
